--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -41,9 +41,9 @@ global.logout=Already logged in. Please click <a href="/logout">here</a> to logo
 global.submit=Submit
 global.reset=Reset
 
-mail.subject=Activate your jappstart account
-mail.body.html=<p>Please click on the link below to activate your jappstart account:<br/><br/><a href=\"{0}/register/activate/{1}\">{0}/register/activate/{1}</a></p>
-mail.body.txt=Please navigate to the URL below to activate your jappstart account:\n\n{0}/register/activate/{1}
+mail.subject=Activate your peekinsi.de account
+mail.body.html=<p>Please click on the link below to activate your peekinsi.de account:<br/><br/><a href=\"{0}/register/activate/{1}\">{0}/register/activate/{1}</a></p>
+mail.body.txt=Please navigate to the URL below to activate your peekinsi.de account:\n\n{0}/register/activate/{1}
 
 Pattern.register.displayName=Please enter a display name.
 Pattern.register.username=Please enter a username.
