--- a/src/main/resources/messages_tl_PH.properties
+++ b/src/main/resources/messages_tl_PH.properties
@@ -1,4 +1,4 @@
-index.title=Maligayang Pagdating sa jappstart
+index.title=Maligayang Pagdating sa peekinsi.de
 
 activate.title=Pagbibigay bisa sa Account
 activate.header=May bisa na ang account!
@@ -41,9 +41,9 @@ global.logout=Naka login ka na. Paki-click <a href="/logout">dito</a> para mag-l
 global.submit=Submit
 global.reset=Burahin lahat
 
-mail.subject=Bigyan ng bisa ang iyong jappstart account
-mail.body.html=<p>Paki-click ang link sa ibaba para bigyan ng bisa ang iyong jappstart account:<br/><br/><a href=\"{0}/register/activate/{1}\">{0}/register/activate/{1}</a></p>
-mail.body.txt=Tumungo sa URL sa ibaba para mabigyan ng bisa ang iyong jappstart account:\n\n{0}/register/activate/{1}
+mail.subject=Bigyan ng bisa ang iyong peekinsi.de account
+mail.body.html=<p>Paki-click ang link sa ibaba para bigyan ng bisa ang iyong peekinsi.de account:<br/><br/><a href=\"{0}/register/activate/{1}\">{0}/register/activate/{1}</a></p>
+mail.body.txt=Tumungo sa URL sa ibaba para mabigyan ng bisa ang iyong peekinsi.de account:\n\n{0}/register/activate/{1}
 
 Pattern.register.displayName=Pakisulat ang iyong pangalan.
 Pattern.register.username=Pakisulat ang iyong username.
