fixing all and adding new qr support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,15 @@ Pattern.register.displayName=Please enter a display name.
 Pattern.register.username=Please enter a username.
 Pattern.register.email=Please enter a valid e-mail address.
 Pattern.register.password=Password must be at least 5 characters.
+
+
+
+
+qr.businesscard.legend=Create your business card QR Code
+qr.businesscard.firstName=First Name:
+qr.businesscard.lastName=Last Name:
+qr.businesscard.email=eMail:
+qr.businesscard.phone=Phone:
+qr.businesscard.address=Address:
+
+
